fix: reduce klaviyo form spacing

--- a/src/index.css
+++ b/src/index.css
@@ -269,6 +269,7 @@
 
   .klaviyo-form-TaTjsW form > div {
     @apply m-0 p-0;
+    min-height: 50px !important;
   }
 
   .klaviyo-form-TaTjsW label {
